# rb_logger

./: .gitignore  CMakeLists.txt  README.md  makefile  smpl.json
cmake/: config.cmake.in
experiments/: CMakeLists.txt
experiments/template/: CMakeLists.txt  myclass.cpp  template_main.cpp
experiments/terminate/: CMakeLists.txt  terminate_main.cpp
include/: macros.hpp
include/trog/: call_data.hpp  collector.hpp  filesystem.hpp  formatter.hpp  logger.hpp  loglevel.hpp  loglevel_impl.hpp  macros.hpp  sink.hpp  trog.cpp  trog.hpp  trog_class.hpp  writer_interface.hpp  writer_simple.hpp  writer_threaded.hpp
include/trog/junk/: call_data.cpp  worker_simple.hpp  worker_thread.cpp
performance/: CMakeLists.txt  configure_trog.hpp  dedicated_thread_speed.cpp  user_thread_speed.cpp
rb_logger/: rb_logger.cpp  rb_logger_class.hpp  rb_logger_config.hpp  rb_logger_macros.hpp
sample-app/: CMakeLists.txt  class_a.cpp  class_a.hpp  class_b.cpp  class_b.hpp  class_c.hpp  class_d.hpp  configure_trog.hpp  main.cpp  makefile
scripts/: inc_install_hdr_pkg.sh  install_boost_1.72.0.sh  install_dependencies.sh
tests/: CMakeLists.txt  main.cpp
tests/test_doctest/: CMakeLists.txt  test_doctest.cpp
tests/test_init/: CMakeLists.txt  test_init.cpp
tests/test_speed/: CMakeLists.txt  test_speed.cpp
tests/test_template/: CMakeLists.txt  myclass.hpp  mytemplate.cpp  mytemplate.hpp  mytemplate.impl.cpp  test_template.cpp
tests/test_terminate/: CMakeLists.txt  test_terminate.cpp
tests/test_trog/: CMakeLists.txt  configure_trog.hpp  test_bit_masking.cpp  test_level_text.cpp  test_levels.cpp  test_main.cpp  test_stand_alone.cpp  test_trog.cpp  test_trog_2.cpp
trog/: call_data.hpp  loglevel.cpp  loglevel.hpp  macros.hpp  setup.hpp  sink.hpp  trog.cpp  trog.hpp  trog_call_data.cpp  trog_call_data.hpp  trog_class.hpp  trog_collector.cpp  trog_collector.hpp  trog_config.hpp  trog_formatter.hpp  trog_macros.hpp  worker.hpp  writer_simple.hpp  writer_threaded.hpp
trog/junk/: worker_simple.cpp  worker_thread.hpp
